wip: basic integration of slot endpoint
